Opened 14 years ago

Closed 13 years ago

#1883 closed defect (fixed)

ASF/WMV Source Aspect Ratio (X/Y) Reversed

Reported by: esa Owned by:
Priority: important Component: avformat
Version: git-master Keywords: asf aspect regression
Cc: Holger Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

I've noticed this bug only when using ffplay/ffmpeg to decode WMV3 video. I believe ffmpeg is reversing the X and Y values for SAR or PAR, resulting in the wrong DAR.

Regression introduced at ffmpeg-20120914-git-8bdba0b. Earlier builds handle DAR/SAR properly.

To reproduce find an ASF that has a pixel aspect ratio of, for instance, 4x3, but which requires a display aspect ratio of 16x9 to view properly. If the source aspect ratio is set to 4x3, then the DAR would display correctly at 16x9. However, under current build the DAR is getting set to 1:1.

Change History (13)

comment:1 by esa, 14 years ago

Component: undeterminedFFplay

comment:2 by Carl Eugen Hoyos, 14 years ago

Component: FFplayavformat
Keywords: asf added; SAR DAR Aspect Ratio removed
Priority: normalimportant
Version: unspecifiedgit-master

Please provide a sample and a command line that allows to reproduce the problem together with complete, uncut console output.

by esa, 14 years ago

Attachment: sample-1.wmv added

comment:3 by esa, 14 years ago

I've attached logs for ffplay and ffprobe for "sample-1.wmv"
Hopefully, that provides all of the requested information.

comment:4 by Michael Niedermayer, 14 years ago

Keywords: aspect added
Reproduced by developer: set
Resolution: fixed
Status: newclosed

will be fixed in my next git push

comment:5 by Carl Eugen Hoyos, 14 years ago

Keywords: regression added

comment:6 by Holger, 13 years ago

Resolution: fixed
Status: closedreopened

1080HdvNtscWrongAspectRatio.wmv:
Is displayed in WMP as 16:9
but in FFmpeg as 4:3

FFmpeg from 2013-07-03

Sample Video:
https://www.dropbox.com/s/dmqsblqw2nmlq3x/1080HdvNtscWrongAspectRatio.wmv

in reply to:  6 comment:7 by Carl Eugen Hoyos, 13 years ago

Cc: Holger added
Resolution: fixed
Status: reopenedclosed

Replying to Holger:

1080HdvNtscWrongAspectRatio.wmv:
Is displayed in WMP as 16:9
but in FFmpeg as 4:3

Generally, please reopen "fixed" tickets only if the original issue was not fixed, ie if the problem as originally described (with the original sample) was not fixed. This is of course not a strict rule, but it is useful as a general guideline. Even more so for tickets that were fixed more than six months ago.
(The original sample is detected as 16:9 with current FFmpeg.)

For the specific case you mentioned: It works fine here, if you get 4:3 output please open a new ticket providing your command line (no external libraries if possible) together with the complete, uncut console output.

by Carl Eugen Hoyos, 11 years ago

Note: See TracTickets for help on using tickets.