asfdec: flip the interpretation of the header aspect back

This reverts 2de88776892093b10522152f1f72b7dfc0320502

Fixes Ticket 1883

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>